<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Import"
        android:icon="@drawable/import_db"
        android:title="@string/Import"
        app:showAsAction="never" />

    <item
        android:id="@+id/export"
        android:icon="@drawable/export"
        android:title="@string/export"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear"
        android:icon="@drawable/delete"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/generate"
        android:icon="@drawable/ic_tile"
        android:title="@string/gen"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="never" />


</menu>
