<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="2dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@drawable/stroke_color"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:hintAnimationEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_verified_user_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:autofillHints="Username"
                android:hint="@string/username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:endIconMode="password_toggle"
            app:hintAnimationEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_security_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_add"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_marginTop="25dp"
            android:layout_toLeftOf="@+id/new_add"
            android:text="@string/cancel"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>